updating global model in global_model.py, adding combined_data.csv to .gitignore

--- a/Global_Model.ipynb
+++ b/Global_Model.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "e1c0f4fd-fa82-4af5-91e8-e03b27685e44",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,9 @@
     "\n",
     "combined_data[\"income\"] = combined_data[\"income\"].astype(int)\n",
     "\n",
-    "print(\"Shape of combined data:\", combined_data.shape)"
+    "print(\"Shape of combined data:\", combined_data.shape)\n",
+    "\n",
+    "#combined_data.to_csv('combined_data.csv', index=False) "
    ]
   },
   {
