better version of fl-model, changes and cleanup processes in Jupyter Notebooks, adding files to .gitignore

--- a/jupyter_notebook/bank_preprocessing.ipynb
+++ b/jupyter_notebook/bank_preprocessing.ipynb
@@ -81,7 +81,7 @@
    "id": "837653f741f0a0f8",
    "metadata": {},
    "source": [
-    "# Data Exploration and Preprocessing"
+    "# Data Preprocessing"
    ]
   },
   {
@@ -778,8 +778,7 @@
     }
    ],
    "source": [
-    "print(df_combinedA_encoded[\"income\"].dtypes)\n",
-    "\n"
+    "print(df_combinedA_encoded[\"income\"].dtypes)\n"
    ]
   },
   {
@@ -802,7 +801,7 @@
    "source": [
     "# Scale ordinal attributes\n",
     "df_combinedA_encoded[ordinalA_columns] = StandardScaler().fit_transform(df_combinedA_encoded[ordinalA_columns])\n",
-    "df_combinedA_encoded = df_combinedA_encoded.astype(float) # set the values of the presprocessed dataset to one type\n",
+    "df_combinedA_encoded = df_combinedA_encoded.astype(float)\n",
     "df_combinedA_encoded.shape"
    ]
   },
